--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "brandaorodrigo/moodle-format_buttons",
+    "name": "brandaorodrigo/moodle-format_mooin4",
     "type": "moodle-format",
     "require": {
         "composer/installers": "~1.0"
     },
     "extra": {
-        "installer-name": "buttons"
+        "installer-name": "mooin4"
     }
 }
